src/objects/BoardBookDoc__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApprovalRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoardBookTab__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BoardBookTab</label>
        <referenceTo>BoardBookTab__c</referenceTo>
        <relationshipLabel>BoardBookDocs</relationshipLabel>
        <relationshipName>BoardBookDocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BoardBook__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BoardBook</label>
        <referenceTo>BoardBook__c</referenceTo>
        <relationshipLabel>BoardBookDocs</relationshipLabel>
        <relationshipName>Docs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastApprovalUpdate__c</fullName>
        <label>LastApprovalUpdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the document has been approved by the internal team before progressing to the Commitee.</description>
        <label>Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority for sorting of documents</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used for field update on boad book doc approval process.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BoardBookDoc</label>
    <nameField>
        <label>Doc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoardBookDocs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>